- 2003-09-19	sfink
	* version number change to 0.0.11.0 for parrot 0.0.11 release
	
- 2003-08-23	leo

	* start moving globals tointerpreter->imcc_info

- 2003-08-23	leo

	* REMOVE THE DEPRECATED NESTED SUBS FEATURE.

	  All code must be contained now in .sub/.pcc_sub/.emit blocks.
	  For PASM source files an .emit/.eom is provided by the lexer.

- 2003-08-22	leo

	* HLL line and file information.
	  The lexer parses now:

	    #line\s(\d+)\s"([^"]*)"
	    setfile\s+"([^"])*"
	    setline\s+(\d+)

	  as HLL file/line information.
	  The setline and setfile opcodes are *not* emitted.

	  This information will go into some debug segment.

- 2003-08-12	leo

	* lexer: enable macros for PIR parsing mode

- 2003-08-11	leo

	* PCC: approaching life analysis for subroutine in/out variables
	       this breaks some imcpasm tests

- 2003-08-10	leo

	* PCC: experimental tail call optimization with -Oc

- 2003-08-09	leo

	* PCC: fix nested subs (preserve ret continuation)
	* PCC: fix multiple return blocks

	* SYNTAX:

	  NEW: unless arg1 relop arg2 goto label

	  works like if (with reversed relop), so that $HL can
	  directly translate:
	    if (a < b)
	      {block}
	    [skip:]
	  to
	    unless a < b goto skip
	      block
	      ...
	    skip:

- 2003-08-08	leo

	* try_find_op: e.g. add_n_i_n => add_n_n_i

- 2003-08-02	leo

	* DEPRECATE NESTED SUBROUTINES and CODE OUTSIDE OF SUBS

	* fix CFG for pcc invoke
	* use want_regno in register assignments for -Oc
	* pcc_optimize() experimental post_optimizer -Oc

- 2003-08-01	leo

	* version 0.0.10.3

	* unprototyped subroutines now check the amount and type
	  of parameters against their .param definitions at runtime
	* TestCompiler.pm: capture stderr too

	* added coroutine code courtesy of Kenneth A Graves
	  s. t/syn/pcc.t for an example and #23186 for a description

	* if a pcc sub calls another sub (or it yields), the passed
	  registers (I5...) are not used as parameters dirctly.
	* emit savetop/restoretop in a yield block