@@ -88,17 +88,17 @@ sub if any. No other statements are allowed between B<.param>.
 
 Proposed syntax:
 
-  $P0 = load_lib "libname"
-  $P1 = dlfunc $P0, "funcname", "signature"
+  load_lib $P0, "libname"
+  dlfunc $P1, $P0, "funcname", "signature"
   ...
-  .nci_begin
+  .pcc_begin protoyped
   .arg x	# I5
   .arg y	# I6
   .arg z	# I7
-  invoke $P1	# r = funcname(x, y, z)
+  .nci_call $P1	# r = funcname(x, y, z)
   .local int r  # optional - new result var
   .result r
-  .nci_end
+  .pcc_end
 
 This prepares parameters as described in
 F<pdd03_calling_conventions.pod>, saves the registers and invokes the
